<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

  <SurfaceView android:id="@+id/preview_view"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_centerInParent="true"/>

  <com.google.zxing.client.android.ViewfinderView
      android:id="@+id/viewfinder_view"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@color/transparent"/>

  <LinearLayout android:id="@+id/result_view"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/result_view"
                android:visibility="gone"
                android:padding="4dip">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:padding="12dip">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:gravity="right">

        <ImageView android:id="@+id/barcode_image_view"
                   android:layout_width="160dip"
                   android:layout_height="wrap_content"
                   android:maxWidth="160dip"
                   android:maxHeight="160dip"
                   android:layout_marginBottom="4dip"
                   android:adjustViewBounds="true"
                   android:scaleType="centerInside"/>

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView android:id="@+id/format_text_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_default_format"
                    android:textColor="@color/result_minor_text"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingRight="4dip"/>

          <TextView android:id="@+id/format_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView android:id="@+id/type_text_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_default_type"
                    android:textColor="@color/result_minor_text"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingRight="4dip"/>

          <TextView android:id="@+id/type_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView android:id="@+id/time_text_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_default_time"
                    android:textColor="@color/result_minor_text"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingRight="4dip"/>

          <TextView android:id="@+id/time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView android:id="@+id/meta_text_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_default_meta"
                    android:textColor="@color/result_minor_text"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingRight="4dip"/>

          <TextView android:id="@+id/meta_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"/>

        </LinearLayout>

      </LinearLayout>

      <ScrollView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          
           <TextView android:id="@+id/contents_text_view"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/result_text"
                  android:textColorLink="@color/result_text"
                  android:textSize="22sp"
                  android:paddingLeft="12dip"
                  android:autoLink="web"/>
                  <TextView android:id="@+id/contents_group" 
                  android:layout_width="wrap_content"
                  android:paddingLeft="12dip"
                  android:textSize="18sp"
                  android:layout_height="wrap_content"/>
                  <LinearLayout android:layout_width="fill_parent"
                  android:paddingLeft="12dip"
                  android:layout_height="wrap_content"
                   android:orientation="horizontal">
                  <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"  
                   android:textSize="18sp"                
                  android:text="备注:"/>
            	<EditText android:id="@+id/contents_remark"
            		  android:layout_width="fill_parent"            		  
                      android:layout_height="wrap_content"/>
                  </LinearLayout>
          
          </LinearLayout>
       

      </ScrollView>

    </LinearLayout>

    <LinearLayout android:id="@+id/result_button_view"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center">

      <Button android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textSize="14sp"
              android:visibility="gone"/>

      <Button android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textSize="14sp"
              android:visibility="gone"/>

      <Button android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textSize="14sp"
              android:visibility="gone"/>

      <Button android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textSize="14sp"
              android:visibility="gone"/>

      <Button android:id="@+id/shopper_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14sp"
              android:drawableLeft="@drawable/shopper_icon"
              android:drawablePadding="4dip"
              android:text="@string/button_google_shopper"
              android:visibility="gone"/>

    </LinearLayout>

  </LinearLayout>
 
    <LinearLayout     
    android:orientation="vertical"
     android:layout_gravity="bottom|center_horizontal"
    android:layout_width="wrap_content"
            android:layout_height="wrap_content">
              <TextView android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:background="@color/transparent"
            android:text="@string/msg_default_status"
            android:textColor="@color/status_text"
            android:textSize="14sp"/>
    <TextView android:id="@+id/topcontext1"
   			android:visibility="gone"
   			android:textSize="14sp"
   			 android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView android:id="@+id/topcontext2"
   			android:visibility="gone"
   			android:textSize="14sp"
   			 android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"/> 
            
            </LinearLayout> 


</FrameLayout>
